--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dped"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9, <=3.12"
 dependencies = [
     "imageio>=2.37.0",
     "opencv-python>=4.11.0.86",
