edit uv config: add tqdm, edit train_model.py test_model.py: add stage printing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "scipy>=1.13.1",
     "split-folders>=0.5.1",
     "tensorflow[and-cuda]>=2.19.0",
+    "tqdm>=4.67.1",
     "wandb>=0.19.11",
 ]
